--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-# File that appears obsolete
-
-
-# Ignore all .tmp files
+# Ignore all non-system files
+saveplace*
+*.el~
 *~
 
-
-# Ignore everything in DEV/
+# Ignore everything in sub-folders/
+auto-save-list/
+elpa/
+emacs-backup/
 DEV/
